[project]
name = "yara-x-authoring-scripts"
version = "2.0.0"
description = "YARA-X rule authoring utilities"
requires-python = ">=3.11"
dependencies = ["yara-x>=0.10.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]

[tool.ruff.lint.isort]
force-single-line = true
